<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flip</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="colors">Colores</string>
    <string name="numbers">Números</string>
    <string name="sound">Sonido</string>
    <string name="vibration">Vibración</string>
    <string name="play">Jugar</string>
    <string name="value">Valor</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_howto">Como jugar</string>
    <string name="menu_player">Jugador</string>
    <string name="how_to_text">Texto de como jugar aquí</string>
    <string name="about_me">Creador: Rathero! ^^</string>
    <string name="title_about">Acerda de</string>

</resources>
