<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewX"
                android:text="0"
                android:gravity="center_horizontal|fill_horizontal|center"
                android:layout_gravity="center_horizontal|center"/>
            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:max="6"
                android:id="@+id/seekBarX"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewY"
                android:gravity="center_horizontal|fill_horizontal|center"
                android:layout_gravity="center_horizontal|center" />
            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:max="6"
                android:id="@+id/seekBarY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewColors"
                android:gravity="center_horizontal|fill_horizontal|center"
                android:layout_gravity="center_horizontal|center"
                android:text="0"/>
            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:max="5"
                android:id="@+id/seekBarColors" />
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colors"
                    android:id="@+id/radioButtonC"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers"
                    android:id="@+id/radioButtonN"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound"
                    android:id="@+id/checkBoxS"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibration"
                    android:id="@+id/checkBoxV"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:gravity="center_horizontal|fill_horizontal|center"
                android:layout_gravity="center_horizontal|center"
                android:id="@+id/buttonPlay"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
